--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -340,6 +340,7 @@
 
       <div class="flex-row align-center">
         <button class="button" onclick="goToInquiry()">Inquiry</button>
+        <button class="button" onclick="window.location.href='../calendar.html'">Calendar Testing</button>
         <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
         <button class="button" onclick="goToStaffRegistration()">Add Staff</button>
         <!-- <button class="button" onclick="openModal('admin')">Add Admin</button> -->
