some stuff Not sure

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -20,8 +20,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <!-- semantic UI -->
-  <link async rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.0.3/dist/semantic.min.css"/>
-  <script async src="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+  <link async rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"/>
+  <script async src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
   <!-- full calendar -->
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.js"></script>
@@ -550,6 +550,10 @@
           <div class="more-info " data-more-info="This is the price for this lesson. This value will autopopulate when you select the type of lesson.">?</div>
           <label for="addLessonPrice" class="label">Price</label>
         </div>
+        <!-- <div class="ui checkbox">
+          <input type="checkbox" id="addLessonPriceDiscount">
+          <label>Discount</label>
+        </div> -->
         <input id="addLessonPrice" name="addLessonPrice" class="input">
 
         <div class="headerLine"></div>
