a bunch of payment stuff

--- a/public/Sign-In/Sign-In.html
+++ b/public/Sign-In/Sign-In.html
@@ -21,6 +21,7 @@
 <body>
   <section id="sign-in-section">
     <div id="sign-in-block">
+      <h1 style="color: #08155B; font-size: 48px; margin: 0px;">Not</h1>
       <img src = "../Images/Wasatch Logo.png">
       <div class="input-block">
         <label for="username" class="label">username</label>
