--- a/public/Sign-In/Sign-In.html
+++ b/public/Sign-In/Sign-In.html
@@ -21,8 +21,8 @@
 <body>
   <section id="sign-in-section">
     <div id="sign-in-block">
-      <h1 style="color: #08155B; font-size: 48px; margin: 0px;">Not</h1>
-      <img src = "../Images/Wasatch Logo.png">
+      <h1 style="color: #08155B; font-size: 64px; margin: 0px;">Lyrn</h1>
+      <!-- <img src = "../Images/Wasatch Logo.png"> -->
       <div class="input-block">
         <label for="username" class="label">username</label>
         <input type="email" placeholder="email address" id="username" class="input">
