--- a/public/calendar.html
+++ b/public/calendar.html
@@ -624,11 +624,16 @@
         </div>
         <input id="editLessonPrice" name="editLessonPrice" class="input">
 
+        <!-- reconciled -->
+        <div class="ui checkbox">
+          <input type="checkbox" id="editLessonReconciled">
+          <label>Reconciled?</label>
+        </div>
+
         <!-- buttons -->
         <div class="bottom">
           <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="updateEditLesson()" class="button">update</button>
-          <!-- <button onclick="deleteEventCallback()" class="button danger">delete</button> -->
           <div class="dropdown">
             <button class="button danger">delete</button>
             <div class="dropdown-content">
