--- a/public/Sign-In/Sign-In.html
+++ b/public/Sign-In/Sign-In.html
@@ -21,7 +21,7 @@
 <body>
   <section id="sign-in-section">
     <div id="sign-in-block">
-      <h1 style="color: #08155B; font-size: 64px; margin: 0px;">Lyrn</h1>
+      <a href="../index.html" style="text-decoration: none; max-width: 40%;"><img src="../Images/Lyrn_Logo.png" alt="Lyrn Logo"></a>
       <!-- <img src = "../Images/Wasatch Logo.png"> -->
       <div class="input-block">
         <label for="username" class="label">username</label>
