--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -41,6 +41,7 @@
     <script src="../../student-info-test.js" defer></script>
     <script src="../../goals-modal.js" defer></script>
     <script src="../../Site Templates/formatting.js" defer></script>
+    <script src="General Info.js" defer></script>
 
     <!-- jQuery
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
